[FIX] Align Detection Box accounting for

--- a/src/style.css
+++ b/src/style.css
@@ -8,11 +8,14 @@ body {
 }
 
 .container {
-    position: relative;
     width: 100%;
     max-width: 1170px;
     margin: 0 auto;
     padding: 0 15px;
+}
+
+.videoContainer {
+    position: relative;
 }
 
 .foundBox { 
